fix error on css for z-index of sunmenu

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,7 +107,7 @@ width: 100%;
   height:85px; 
   text-align:center; 
   position:absolute; 
-  z-index:130;
+  z-index:85;
   }
  
 .main  .bottom-vin {background-image:url('bottom-slider.png');  margin-top:-4.5%; }
